--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>criccobestemmie</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
 <h1>LE CRICCOBESTEMMIE</h1>
