--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 <br>
 <br>
 <br>
-	<div id="quoteDisplay">
-	<h1>
+	<div.button id="quoteDisplay">
+	
 	<!-- Quotes will display here -->
-	</h1>
+	
 </div>
 <br>
 <br>
